--- a/style.css
+++ b/style.css
@@ -50,11 +50,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button{
   outline: none;
 }
 
@@ -119,7 +121,6 @@ li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -141,7 +142,7 @@ li > label {
 }
 
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .delete img {
@@ -157,19 +158,19 @@ li >    input[type="text"] {
 /* Completed */
 
 #completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
  
 /* Edit Task */
 
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.edit-mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul li.edit-mode label {
